navbar Alignment corrected

--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -33,35 +33,29 @@
 	padding-top: 20px;
 }
 
-.header-drawer-parent{ 
-		
+.header-drawer-parent {
 	display: none;
-
 }
 
- .header-drawer-ul{
-
+.header-drawer-ul {
 	display: none;
-	 }
+}
 
- @media all and (min-width: 1120px){
-	 .header-drawer-parent{
-		 overflow: hidden;
-		 margin-top:-15px;
-		 display: flex;
-			 justify-content: center;
-			 align-content: center;
-			 align-self: center;
-		 align-self: center;
-		 justify-self: center;
-		 visibility: visible;
-		
-	 
-	 }
-	 .header-drawer-ul{
-	 display: flex;
-	 	height: 60px;
-	 visibility: visible;
-	 }
-	 
-	}    
+@media all and (min-width: 1120px) {
+	.header-drawer-parent {
+		overflow: hidden;
+		margin-top: -10px;
+		display: flex;
+		justify-content: center;
+		align-content: center;
+		align-self: center;
+		align-self: center;
+		justify-self: center;
+		visibility: visible;
+	}
+	.header-drawer-ul {
+		display: flex;
+		height: 60px;
+		visibility: visible;
+	}
+}
